test/sema/typeck/binop/add-type-param-missing-trait.out
error: binary operator `+` can not handle expression of type `T + T`
--> add-type-param-missing-trait.dora:2:5
 | fn plus[T](lhs: T, rhs: T): Bool {
 |     lhs + rhs
       ~~~~~~~~~
 | }
 | 
1 error found.
