test/sema/typeck/binop/add-type-param-missing-trait.dora
fn plus[T](lhs: T, rhs: T): Bool {
    lhs + rhs
}
